--- a/TODO
+++ b/TODO
@@ -9,3 +9,5 @@ x = canceled
 
 New ideas are added on top of the list and are sometimes reordered.
 
+... have testing image instead of before_script
+... organise tests in groups : images, library, role_init
