--- a/TODO
+++ b/TODO
@@ -9,5 +9,6 @@ x = canceled
 
 New ideas are added on top of the list and are sometimes reordered.
 
+... define push strategy (gitlab+github)
 ... have testing image instead of before_script
 ... organise tests in groups : images, library, role_init
