--- a/TODO
+++ b/TODO
@@ -11,4 +11,4 @@ New ideas are added on top of the list and are sometimes reordered.
 
 ... define push strategy (gitlab+github)
 ... have testing image instead of before_script
-... organise tests in groups : images, library, role_init
+vvv organise tests in groups : images, library, role_init
