--- a/TODO
+++ b/TODO
@@ -9,10 +9,11 @@ x = canceled
 
 New ideas are added on top of the list and are sometimes reordered.
 
+... documentation - improve documentation quality
 >>> role_init - must refacto script
    vvv usage function
    vvv role_init can work as a link (installation easier)
-   ... check parameters
+   >>> check parameters
 ... define push strategy (gitlab+github)
 vvv have testing image instead of before_script
 vvv organise tests in groups : images, library, role_init
