--- a/README.adoc
+++ b/README.adoc
@@ -56,6 +56,7 @@ role_unit behaviour can be changed using environment variables:
 * RU_ENV_DOCKER_REPO defines the docker repository to pull images from.
 * RU_ENV_IMAGE defines the system image used to create test environment.
 * RU_COUNT sets the number of containers or virtual machines
+* RU_DEBUG when set to 1, will make role_unit not to stop containers after the run, so you can enter them to check things.
 
 == about namespace
 
